tests/snapshots/parser_snapshots__globs__brace_expansion.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo {a,b,c}\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    BraceExpansion(
                        [
                            "a",
                            "b",
                            "c",
                        ],
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
