tests/snapshots/parser_snapshots__globs__star.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"ls *.rs\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "ls",
                    ),
                ],
            },
            Word {
                parts: [
                    Glob(
                        "*",
                    ),
                    Literal(
                        ".rs",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
